--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity
+            android:name=".ProfileActivity"
+            android:parentActivityName=".UsersActivity" />
+        <activity
+            android:name=".UsersActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".StatusActivity"
             android:parentActivityName=".SettingsActivity" />
-
         <activity android:name=".SettingsActivity" />
-
         <activity android:name=".LoginActivity" />
-
         <activity
             android:name=".RegisterActivity"
             android:parentActivityName=".StartActivity" />
-
         <activity android:name=".StartActivity" />
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,11 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-
     </application>
 
 </manifest>
